# crypto-alert

./: docker-compose.yml  pyproject.toml
backend/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/src/: config.py  database.py  main.py
backend/src/alerts/: constants.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/src/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/src/cache/: redis_client.py
backend/src/market_data/: client.py  constants.py  exceptions.py  router.py  schemas.py  service.py
backend/src/monitoring/: alert_checker.py  price_monitor.py  scheduler.py
backend/src/notifications/: email_service.py  router.py
backend/src/notifications/templates/: alert_triggered.html
backend/src/websocket/: manager.py  router.py  schemas.py
backend/templates/: websocket_test.html
backend/tests/test_alerts/: test_alerts.py
backend/tests/test_auth/: test_auth_complete.py
backend/tests/test_market_data/: test_market_data.py
backend/tests/test_redis/: test_redis.py
frontend/: package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/api/: alerts.js  auth.js  client.js  market.js
frontend/src/contexts/: AuthContext.jsx  WebSocketContext.jsx
frontend/src/pages/: Dashboard.jsx  DashboardWrapper.jsx  Login.jsx  Register.jsx
