[project]
name = "crypto-alert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.128.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]",
    "python-multipart>=0.0.21",
    "redis>=7.1.0",
    "structlog>=25.5.0",
    "uvicorn>=0.40.0",
    "bcrypt==4.3.0",
]
