[project]
name = "crypto-alert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.128.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]",
    "python-multipart>=0.0.21",
    "redis[hiredis]>=7.1.0",
    "structlog>=25.5.0",
    "uvicorn>=0.40.0",
    "bcrypt==4.3.0",
    "yfinance>=1.0",
    "python-binance>=1.0.34",
    "httpx>=0.28.1",
    "aiohttp>=3.13.3",
    "websockets>=15.0.1",
    "python-socketio>=5.16.0",
]
